Javadoc comments completed, added second lambda expression, and debugged login controller for french settings.